objects/BICE_Alert_Type__c.object
<CustomObject>
    <description>This object contains types of alert that comes from the BICE&apos;s legacy system.</description>
    <fields>
        <fullName>Create_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Configuration for alert type.</description>
        <label>Create Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a opportunitty should be created.</description>
        <label>Create_Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Post__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a post should be made.</description>
        <label>Create_Post</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a task should be created.</description>
        <label>Create_Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the alert type.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <label>BICE Alert Type</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BICE Alert types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>